--- a/website/index.html
+++ b/website/index.html
@@ -14,6 +14,8 @@
     padding: 0;
     font-family: Arial, sans-serif;
     overflow-x: hidden;
+    background: black;
+    color: white;
   }
 
   /* HEADER */
@@ -36,7 +38,6 @@
     cursor: pointer;
     user-select: none;
     margin-left: 0;
-    /* Remove shadows */
     filter: none;
     box-shadow: none;
     transition: margin 0.3s ease;
@@ -52,7 +53,6 @@
   .cart-icon {
     font-size: 24px;
     color: white;
-    /* Remove shadows */
     filter: none;
     box-shadow: none;
   }
@@ -166,7 +166,7 @@
     }
     .logo {
       height: 26px; /* original mobile size */
-      margin-left: 20px; /* adjust as needed */
+      margin-left: 20px;
       filter: none;
       box-shadow: none;
     }
