--- a/website/index.html
+++ b/website/index.html
@@ -5,179 +5,239 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Matt Scianna</title>
 
-  <!-- Fonts -->
+  <!-- Favicon -->
+  <link rel="icon" href="https://github.com/mattscianna/mattscianna/blob/main/ms-logo.png?raw=true" type="image/png">
+
+  <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Cardo&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Graduate&display=swap" rel="stylesheet">
 
-  <!-- Font Awesome for shopping bag icon -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
-
   <style>
-    * {
-      box-sizing: border-box;
-    }
-
     body {
       margin: 0;
       font-family: 'Cardo', serif;
       background-color: white;
-      overflow-x: hidden;
     }
 
-    /* Header */
     .header {
-      position: relative;
+      position: fixed;
+      top: 0;
+      width: 100%;
       height: 80px;
       display: flex;
       align-items: center;
       justify-content: center;
+      background-color: white;
       z-index: 1001;
     }
 
     .logo {
-      height: 40px;
-      margin-top: 0;
+      height: 35px;
+      cursor: pointer;
     }
 
-    .menu-icon, .cart-icon {
+    .menu-icon {
       position: absolute;
+      left: 16px;
       top: 50%;
       transform: translateY(-50%);
+      width: 32px;
+      height: auto;
       cursor: pointer;
       z-index: 1002;
     }
 
-    .menu-icon {
-      left: 16px;
-      width: 28px;
+    .cart-container {
+      position: absolute;
+      right: 16px;
+      top: 50%;
+      transform: translateY(-50%);
+      cursor: pointer;
+      width: 32px;
+      height: 32px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      z-index: 1002;
     }
 
     .cart-icon {
-      right: 16px;
-      font-size: 24px;
-      color: #8B0000;
+      width: 28px;
+      height: auto;
+      display: block;
+      position: relative;
     }
 
-    /* Sidebar */
+    .cart-count {
+      position: absolute;
+      top: -6px;
+      right: -6px;
+      background-color: #8B0000;
+      color: white;
+      font-family: Arial, sans-serif;
+      font-size: 12px;
+      padding: 1px 5px;
+      border-radius: 50%;
+      display: none;
+      pointer-events: none;
+      user-select: none;
+      font-weight: bold;
+      min-width: 18px;
+      text-align: center;
+      line-height: 1.2;
+    }
+
     .sidebar {
       position: fixed;
       top: 0;
       left: -100%;
-      width: 100%;
+      width: 250px;
       height: 100%;
       background-color: white;
-      transition: left 0.3s ease;
-      z-index: 1000;
-      display: flex;
-      flex-direction: column;
-      justify-content: flex-start;
-      padding-top: 100px;
-      padding-left: 30px;
       font-family: 'Cardo', serif;
-    }
-
-    .sidebar a {
-      text-decoration: none;
-      color: #8B0000;
-      font-size: 24px;
-      margin-bottom: 20px;
       text-transform: uppercase;
+      padding: 100px 20px 20px 20px;
+      box-shadow: 2px 0 5px rgba(0,0,0,0.1);
+      transition: left 0.15s ease;
+      z-index: 1000;
+      visibility: hidden;
     }
 
     .sidebar.open {
       left: 0;
+      visibility: visible;
     }
 
-    /* Hamburger Menu (X Toggle) */
-    .menu-toggle {
-      width: 28px;
-      height: 20px;
-      position: relative;
-      transition: transform 0.3s ease;
+    .sidebar-close-container {
+      position: absolute;
+      top: 30px;
+      left: 20px;
+      width: 40px;
+      height: 40px;
+      cursor: pointer;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      z-index: 1002;
     }
 
-    .bar {
+    .sidebar-close {
+      width: 24px;
+      height: auto;
       display: block;
-      height: 3px;
+    }
+
+    .overlay {
+      position: fixed;
+      top: 0;
+      left: 0;
+      height: 100%;
       width: 100%;
-      background-color: #8B0000;
-      margin: 5px 0;
-      transition: all 0.3s ease;
+      background: rgba(0,0,0,0.1);
+      display: none;
+      z-index: 999;
     }
 
-    .menu-toggle.open .bar:nth-child(1) {
-      transform: rotate(45deg) translateY(8px);
+    .overlay.show {
+      display: block;
     }
 
-    .menu-toggle.open .bar:nth-child(2) {
-      opacity: 0;
-    }
-
-    .menu-toggle.open .bar:nth-child(3) {
-      transform: rotate(-45deg) translateY(-8px);
-    }
-
-    /* Responsive */
     @media screen and (max-width: 600px) {
-      .sidebar a {
-        font-size: 22px;
-      }
-
-      .header {
-        padding: 10px 0;
-      }
-
       .logo {
-        height: 32px;
+        height: 30px;
       }
 
       .menu-icon {
-        width: 24px;
+        width: 28px;
+        left: 12px;
+      }
+
+      .cart-container {
+        width: 28px;
+        height: 28px;
+        right: 12px;
       }
 
       .cart-icon {
-        font-size: 22px;
+        width: 24px;
+      }
+
+      .sidebar-close-container {
+        width: 28px;
+        height: 28px;
+        left: 12px;
+        top: 26px;
+      }
+
+      .sidebar-close {
+        width: 20px;
+      }
+
+      .header {
+        height: 70px;
+      }
+
+      .sidebar {
+        padding: 90px 20px 20px 20px;
+        text-align: left;
+      }
+
+      .sidebar p {
+        margin: 10px 0;
       }
     }
   </style>
 </head>
-
 <body>
-  <!-- Header -->
+
+  <div class="overlay" id="overlay" onclick="closeSidebar()"></div>
+
   <div class="header">
-    <!-- Menu Icon -->
-    <div class="menu-icon" onclick="toggleMenu()">
-      <div class="menu-toggle" id="menu-toggle">
-        <span class="bar"></span>
-        <span class="bar"></span>
-        <span class="bar"></span>
-      </div>
-    </div>
-
-    <!-- Logo -->
-    <img src="https://github.com/mattscianna/mattscianna/blob/main/Copy_of_Logo_1-2-removebg-preview.png?raw=true" class="logo" alt="Matt Scianna Logo" />
-
-    <!-- Cart Icon -->
-    <div class="cart-icon">
-      <i class="fas fa-bag-shopping"></i>
+    <img src="https://github.com/mattscianna/mattscianna/blob/main/MENU.png?raw=true" alt="Menu Icon" class="menu-icon" onclick="toggleSidebar()" />
+    <img src="https://github.com/mattscianna/mattscianna/blob/main/MATTSCIANNA.png?raw=true" alt="Matt Scianna" class="logo" onclick="location.reload()" />
+    
+    <div class="cart-container">
+      <img src="https://img.icons8.com/ios-filled/50/000000/shopping-bag.png" alt="Shopping Bag" class="cart-icon" />
+      <div class="cart-count" id="cart-count">0</div>
     </div>
   </div>
 
-  <!-- Sidebar -->
-  <div class="sidebar" id="sidebar">
-    <a href="#">Home</a>
-    <a href="#">Shop</a>
-    <a href="#">About</a>
-    <a href="#">Contact</a>
+  <div id="sidebar" class="sidebar">
+    <div class="sidebar-close-container" onclick="closeSidebar()">
+      <img src="https://github.com/mattscianna/mattscianna/blob/main/X.png?raw=true" alt="Close Sidebar" class="sidebar-close" />
+    </div>
+    <p>Home</p>
+    <p>Shop</p>
+    <p>Contact</p>
+    <p>About</p>
   </div>
 
   <script>
-    function toggleMenu() {
-      const sidebar = document.getElementById("sidebar");
-      const menuToggle = document.getElementById("menu-toggle");
-      sidebar.classList.toggle("open");
-      menuToggle.classList.toggle("open");
+    function toggleSidebar() {
+      const sidebar = document.getElementById('sidebar');
+      const overlay = document.getElementById('overlay');
+      sidebar.classList.toggle('open');
+      overlay.classList.toggle('show');
     }
+
+    function closeSidebar() {
+      document.getElementById('sidebar').classList.remove('open');
+      document.getElementById('overlay').classList.remove('show');
+    }
+
+    const cartCount = document.getElementById('cart-count');
+
+    function updateCartCount(count) {
+      if(count > 0) {
+        cartCount.style.display = 'block';
+        cartCount.textContent = count;
+      } else {
+        cartCount.style.display = 'none';
+      }
+    }
+
+    updateCartCount(0); // Hidden initially
   </script>
+
 </body>
 </html>
