--- a/website/index.html
+++ b/website/index.html
@@ -5,12 +5,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Matt Scianna</title>
 
-  <!-- Favicon -->
-  <link rel="icon" href="https://github.com/mattscianna/mattscianna/blob/main/ms-logo.png?raw=true" type="image/png">
-
-  <!-- Google Fonts -->
+  <!-- Font: Cardo -->
   <link href="https://fonts.googleapis.com/css2?family=Cardo&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css2?family=Graduate&display=swap" rel="stylesheet">
+  
+  <!-- Font Awesome for shopping bag icon -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
 
   <style>
     body {
@@ -20,62 +19,56 @@
     }
 
     .header {
-      position: fixed;
-      top: 0;
-      width: 100%;
-      height: 80px;
+      position: relative;
+      height: 100px;
       display: flex;
       align-items: center;
       justify-content: center;
-      background-color: white;
-      z-index: 1001;
     }
 
     .logo {
-      height: 35px;
+      margin-top: 20px;
+      height: 45px;
       cursor: pointer;
     }
 
     .menu-icon {
       position: absolute;
-      left: 16px;
+      left: 20px;
       top: 50%;
       transform: translateY(-50%);
-      width: 32px;
+      width: 40px;
       height: auto;
       cursor: pointer;
-      z-index: 1002;
     }
 
     .cart-container {
       position: absolute;
-      right: 16px;
+      right: 20px;
       top: 50%;
       transform: translateY(-50%);
       cursor: pointer;
-      width: 32px;
-      height: 32px;
+      width: 40px;
+      height: 40px;
       display: flex;
       justify-content: center;
       align-items: center;
-      z-index: 1002;
     }
 
     .cart-icon {
-      width: 28px;
-      height: auto;
-      display: block;
+      font-size: 28px;
+      color: black;
       position: relative;
     }
 
     .cart-count {
       position: absolute;
       top: -6px;
-      right: -6px;
+      right: -10px;
       background-color: #8B0000;
       color: white;
       font-family: Arial, sans-serif;
-      font-size: 12px;
+      font-size: 14px;
       padding: 1px 5px;
       border-radius: 50%;
       display: none;
@@ -110,19 +103,18 @@
 
     .sidebar-close-container {
       position: absolute;
-      top: 30px;
+      top: 36px;
       left: 20px;
-      width: 40px;
-      height: 40px;
+      width: 32px;
+      height: 32px;
       cursor: pointer;
       display: flex;
       justify-content: center;
       align-items: center;
-      z-index: 1002;
     }
 
     .sidebar-close {
-      width: 24px;
+      width: 18px;
       height: auto;
       display: block;
     }
@@ -144,46 +136,38 @@
 
     @media screen and (max-width: 600px) {
       .logo {
-        height: 30px;
+        height: 35px;
+        margin-top: 10px;
       }
 
       .menu-icon {
-        width: 28px;
-        left: 12px;
+        width: 32px;
+        left: 16px;
       }
 
       .cart-container {
-        width: 28px;
-        height: 28px;
-        right: 12px;
+        width: 32px;
+        height: 32px;
+        right: 16px;
       }
 
       .cart-icon {
-        width: 24px;
+        font-size: 24px;
       }
 
       .sidebar-close-container {
-        width: 28px;
-        height: 28px;
-        left: 12px;
-        top: 26px;
+        width: 32px;
+        height: 32px;
+        left: 16px;
+        top: 30px;
       }
 
       .sidebar-close {
-        width: 20px;
+        width: 18px;
       }
 
       .header {
-        height: 70px;
-      }
-
-      .sidebar {
-        padding: 90px 20px 20px 20px;
-        text-align: left;
-      }
-
-      .sidebar p {
-        margin: 10px 0;
+        height: 80px;
       }
     }
   </style>
@@ -196,8 +180,8 @@
     <img src="https://github.com/mattscianna/mattscianna/blob/main/MENU.png?raw=true" alt="Menu Icon" class="menu-icon" onclick="toggleSidebar()" />
     <img src="https://github.com/mattscianna/mattscianna/blob/main/MATTSCIANNA.png?raw=true" alt="Matt Scianna" class="logo" onclick="location.reload()" />
     
-    <div class="cart-container">
-      <img src="https://img.icons8.com/ios-filled/50/000000/shopping-bag.png" alt="Shopping Bag" class="cart-icon" />
+    <div class="cart-container" id="cart-icon">
+      <i class="fas fa-shopping-bag cart-icon"></i>
       <div class="cart-count" id="cart-count">0</div>
     </div>
   </div>
@@ -236,7 +220,7 @@
       }
     }
 
-    updateCartCount(0); // Hidden initially
+    updateCartCount(0); // Start with count hidden
   </script>
 
 </body>
